alterações nos listar

--- a/PI/Pages/cadastrar_categoria.html
+++ b/PI/Pages/cadastrar_categoria.html
@@ -67,22 +67,27 @@
                 <button class="btn_salvar_produto">Salvar</button>
             </div>
             <div class="continer_cadastrar_produto_adm">
-                <div class="top_container_cadastrar_produto_adm">
-                    <div class="item_top_produto">
-                        <label for="">Titulo</label>
-                        <input type="text">
+                <div class="top_container_cadastrar_categoria_adm">
+                    <div class="left_conatiner_cadastrar_categoria_adm">
+                        <div class="item_top_produto">
+                            <label for="">Titulo</label>
+                            <input type="text">
+                        </div>
+                        <div class="item_top_produto">
+                            <label for="">Status</label>
+                            <select name="" id="">
+                                <option value="op1">Ativo</option>
+                                <option value="op1">Inativo</option>
+                            </select>
+                        </div>
+                        <div class="item_top_produto">
+                            <label for="">Descrição</label>
+                            <textarea name="" id="">
+                            </textarea>
+                        </div>
                     </div>
-                    <div class="item_top_produto">
-                        <label for="">Status</label>
-                        <select name="" id="">
-                            <option value="op1">Ativo</option>
-                            <option value="op1">Inativo</option>
-                        </select>
-                    </div>
-                    <div class="item_top_produto">
-                        <label for="">Descrição</label>
-                        <textarea name="" id="">
-                        </textarea>
+                    <div class="right_conatiner_cadastrar_categoria_adm">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, officiis esse suscipit quam eveniet praesentium delectus recusandae deserunt fugiat cupiditate voluptatibus officia impedit ea libero voluptate provident voluptas aspernatur sed!
                     </div>
                     
                 </div>
@@ -109,18 +114,6 @@
                         
                     </div>
                 </div>
-                <div class="botoom_container_cadastrar_produto_adm">
-                    <div class="item_top_produto">
-                        <label for="">Imagem</label>
-                        <div class="img_container_botoom_produto">
-                            <div class="img_adcionar_produto">
-                                +
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
 
             </div>
         </div>
