--- a/PI/Pages/listar_categoria_adm.html
+++ b/PI/Pages/listar_categoria_adm.html
@@ -85,8 +85,8 @@
                 <div class="container_body_listar_produtos_body">
                     <table>
                         <tr>
-                            <th class="td_adm">
-                                eeee
+                            <th class="adm_center" >
+
                             </th>
                             <th>
                                 Titulo
@@ -98,12 +98,14 @@
                                 status
                             </th>
                             <th>
-                                editar
+                                ações
                             </th>
                         </tr>
                         <tr>
-                            <td class="container_listar_check_box   td_adm">
-                                <input type="checkbox" name="" id="">
+                            <td>
+                                <div  class="adtm_center_item">
+                                    <input type="checkbox" name="" id="">
+                                </div>
                             </td>
                             <td class="container_listar_check">
                                 Cachepô
@@ -111,27 +113,56 @@
                             <td>
                                 16
                             </td>
-                            <td class="td_adm">
-                                <div class="shape_status_produtos"></div>
-                                Ativo
+                            <td>
+                                <div class="container_flex_shape_status">
+                                    <div class="shape_status_produtos"></div>
+                                    Ativo
+                                </div>
                             </td>
-                            <td class="drop_father-drop_adm_view">
-                                <i class="fa-solid fa-eye open_drop_adm_view">
-                                    <div class="drop_adm_view">
-                                        <ul>
-                                            <li>
-                                                <a href="">
-                                                    <i class="fa-solid fa-pencil"></i>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="">
-                                                    <i class="fa-solid fa-trash"></i>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </i>
+                            <td>
+                                <ul  class="item_list_tree">
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-pencil"></i></a>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" checked="true" class="switch" name="" id="">
+                                    </li>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-trash"></i></a>
+                                    </li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div  class="adtm_center_item">
+                                    <input type="checkbox" name="" id="">
+                                </div>
+                            </td>
+                            <td class="container_listar_check">
+                                Cachepô
+                            </td>
+                            <td>
+                                16
+                            </td>
+                            <td>
+                                <div class="container_flex_shape_status">
+                                    <div class="shape_status_produtos"></div>
+                                    Ativo
+                                </div>
+                            </td>
+                            <td class="item_list_tree">
+                                <ul>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-pencil"></i></a>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" checked="true" class="switch" name="" id="">
+                                    </li>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-trash"></i></a>
+                                    </li>
+                                </ul>
                             </td>
                         </tr>
 
