--- a/PI/Pages/listar_pedidos_adm.html
+++ b/PI/Pages/listar_pedidos_adm.html
@@ -88,24 +88,23 @@
                                 Numero
                             </th>
                             <th>
-                                Total
+                                total
                             </th>
                             <th>
-                                Tipo
+                                tipo
                             </th>
                             <th>
-                                Estado
+                                estado
                             </th>
                             <th>
-                                Status
+                                status
                             </th>
                             <th>
-                                Ver
+                                ações
                             </th>
                         </tr>
                         <tr>
                             <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
                                 #5632
                             </td>
                             <td>
@@ -118,10 +117,20 @@
                                 MS
                             </td>
                             <td>
-                                <div class="shape_status_produtos"></div>
+                                <div class="container_flex_shape_status">
+                                    <div class="shape_status_produtos"></div>
+                                    Ativo
+                                </div>
                             </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
+                            <td class="item_list_tree">
+                                <ul>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-pencil"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-trash"></i></a>
+                                    </li>
+                                </ul>
                             </td>
                         </tr>
                     </table>
