--- a/PI/Pages/listar_produto_adm.html
+++ b/PI/Pages/listar_produto_adm.html
@@ -84,29 +84,40 @@
                 <div class="container_body_listar_produtos_body">
                     <table>
                         <tr>
+                            <th class="adm_center">
+
+                            </th>
                             <th>
                                 Titulo
                             </th>
                             <th>
-                                Estoque
+                                estoque
                             </th>
                             <th>
-                                Categoria
+                                categoria
                             </th>
                             <th>
-                                Status
+                                status
                             </th>
                             <th>
-                                Editar
+                                ações
                             </th>
                         </tr>
                         <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
+                            <td>
+                                <div  class="adtm_center_item">
+                                    <input type="checkbox" name="" id="">
                                 </div>
-                                Cachepô de Crochê
+                            </td>
+                            <td>
+                                <div class="container_item_listimg_nome">
+                                    <div class="img_conatiner_listar_produto">
+                                        <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
+                                    </div>
+                                    <div class="container_listar_check">
+                                        Cachepô de Crochê
+                                    </div>
+                                </div>
                             </td>
                             <td>
                                 16
@@ -115,139 +126,26 @@
                                 Cachepô
                             </td>
                             <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
+                                <div class="container_flex_shape_status">
+                                    <div class="shape_status_produtos"></div>
+                                    Ativo
                                 </div>
-                                Cachepô de Crochê
                             </td>
-                            <td>
-                                16
-                            </td>
-                            <td>
-                                Cachepô
-                            </td>
-                            <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
-                                </div>
-                                Cachepô de Crochê
-                            </td>
-                            <td>
-                                16
-                            </td>
-                            <td>
-                                Cachepô
-                            </td>
-                            <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
+                            <td class="item_list_tree">
+                                <ul>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-pencil"></i></a>
+                                    </li>
+                                    <li>
+                                        <input type="checkbox" checked="true" class="switch" name="" id="">
+                                    </li>
+                                    <li>
+                                        <a href=""><i class="fa-solid fa-trash"></i></a>
+                                    </li>
+                                </ul>
                             </td>
                         </tr>
-                        <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
-                                </div>
-                                Cachepô de Crochê
-                            </td>
-                            <td>
-                                16
-                            </td>
-                            <td>
-                                Cachepô
-                            </td>
-                            <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
-                                </div>
-                                Cachepô de Crochê
-                            </td>
-                            <td>
-                                16
-                            </td>
-                            <td>
-                                Cachepô
-                            </td>
-                            <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
-                                </div>
-                                Cachepô de Crochê
-                            </td>
-                            <td>
-                                16
-                            </td>
-                            <td>
-                                Cachepô
-                            </td>
-                            <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="container_listar_check">
-                                <input type="checkbox" name="" id="">
-                                <div class="img_conatiner_listar_produto">
-                                    <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
-                                </div>
-                                Cachepô de Crochê
-                            </td>
-                            <td>
-                                16
-                            </td>
-                            <td>
-                                Cachepô
-                            </td>
-                            <td>
-                                <div class="shape_status_produtos"></div>
-                            </td>
-                            <td>
-                                <i class="fa-solid fa-eye"></i>
-                            </td>
-                        </tr>
-
+                    
                     </table>
 
                 </div>
