drop historico de pedidos

--- a/PI/Pages/cadastrar_categoria.html
+++ b/PI/Pages/cadastrar_categoria.html
@@ -15,6 +15,7 @@
     <title>Navbar ADM</title>
 </head>
 <body class="body_adm">
+    <img class="shape_adm" src="../src/imagens/shape_adm/img1-removebg-preview.png" alt="">
     <header>
         <div class="nav" id="nav">
             <nav class="nav__content">
@@ -87,7 +88,12 @@
                         </div>
                     </div>
                     <div class="right_conatiner_cadastrar_categoria_adm">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, officiis esse suscipit quam eveniet praesentium delectus recusandae deserunt fugiat cupiditate voluptatibus officia impedit ea libero voluptate provident voluptas aspernatur sed!
+                        <div class="container_title_imf_cat"><h6>Imagem</h6></div>
+                            <div class="conatiner_img_categoria">
+                                <div class="container_input_file"><i class="fa-solid fa-plus"></i></div>
+                                <img src="../src/imagens/card_produto/IMG1-Produto.png" alt="">
+                            </div>
+                            <div class="tamanho_banner_adm">Tamanho recomendavel (1700x700px)</div>
                     </div>
                     
                 </div>
