--- a/PI/Pages/Home.html
+++ b/PI/Pages/Home.html
@@ -222,7 +222,7 @@
         </nav>
         <!-- FIM MENU NAVBAR -->
     </header>
-    <main>
+    <main  class="main2">
         <!-- INICIO BANNER PRINCIPAL -->
         <section id="carouselExampleControls" class="carousel slide carrosel_pc" data-ride="carousel">
             <div class="carousel-inner">
@@ -1013,7 +1013,7 @@
 
 
 
-    </main>
+    </main >
     <footer>
         <div class="container-footer">
             <div class="row-footer">
