--- a/PI/Pages/SobreNos.html
+++ b/PI/Pages/SobreNos.html
@@ -208,7 +208,7 @@
         </nav>
         <!-- FIM MENU NAVBAR -->
     </header>
-    <main>
+    <main  class="main2">
 
         <section class="Banner_Sobre_Nos">
             <div class="shape_sobre"></div>
