--- a/PI/Pages/cadastrar_categoria.html
+++ b/PI/Pages/cadastrar_categoria.html
@@ -57,7 +57,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main  class="main2">
         <div class="cadastrar_produto_adm">
             <div class="title_continer_cadastrar_produto_adm">
                 <a href=""><i class="fa-solid fa-chevron-left"></i></a>
