--- a/PI/Pages/categorias.html
+++ b/PI/Pages/categorias.html
@@ -208,7 +208,7 @@
         </nav>
         <!-- FIM MENU NAVBAR -->
     </header>
-    <main>
+    <main  class="main2">
         <div class="container_categorias">
 
             <aside class="top_categoria_mobile">
