--- a/PI/Pages/comprar_produto.html
+++ b/PI/Pages/comprar_produto.html
@@ -225,7 +225,7 @@
 
 
 
-    <main>
+    <main  class="main2">
         <div class="comprar_produto">
             <section class="comprar_produto_top">
                 <div class="conatiner_name_produto_cat">
