--- a/PI/Pages/historico_pedido.html
+++ b/PI/Pages/historico_pedido.html
@@ -210,7 +210,7 @@
         </nav>
         <!-- FIM MENU NAVBAR -->
     </header>
-    <main class="main_favoritos">
+    <main  class="main2">
         <section class="container_favortos">
             <div class="left-container_favoritos">
                 <div class="container_favoritos_left">
@@ -224,6 +224,9 @@
                         </li>
                         <li class="item_favorito_left">
                             <i class="fa-solid  icon_favorito_content fa-boxes-stacked"></i><a class="link_favorito_left" href="">Histórico de Pedidos</a>
+                        </li>
+                        <li class="item_favorito_left">
+                            <i class="fa-solid fa-pencil icon_favorito_content"></i><a class="link_favorito_left" href="">Alterar Perfil</a>
                         </li>
                     </ul>
 
@@ -339,12 +342,12 @@
                                 </div>
                                 <div class="shape_sacola_final"></div>
                                 <div class="container_text_preco_final_cart">
-                                    <p class="total_text_cart">Cód. Rastreio:</p>
-                                    <p class="total_valor_cart">LX123456789BR</p>
+                                    <p style="font-weight: 500; color: #4A4A4A;" class="total_text_cart">Cód. Rastreio:</p>
+                                    <p style="font-weight: 500; color: #4A4A4A;"class="total_valor_cart">LX123456789BR</p>
                                 </div>
                                 <div class="shape_sacola_final"></div>
                                 
-                                <button data-modal="modal-1" class="btn_final_cart open-modal">Rastrei sua Econmenda</button>
+                                <button data-modal="modal-1" class="btn_final_cart open-modal">Rastrei sua Encomenda</button>
                             </div>
                             <!-- <button class="open-modal" data-modal="modal-1">
 
