--- a/PI/Pages/produto_personalizado.html
+++ b/PI/Pages/produto_personalizado.html
@@ -206,7 +206,7 @@
         </nav>
         <!-- FIM MENU NAVBAR -->
     </header>
-    <main>
+    <main  class="main2">
        <div class="container_produto_personazalizado">
 
         <section class="Banner_Sobre_Nos">
