--- a/PI/Pages/listar_pedidos_adm.html
+++ b/PI/Pages/listar_pedidos_adm.html
@@ -59,7 +59,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main  class="main2">
         <div class="listar_produtos">
             <div class="container_header_listar_produtos">
                 <div class="title_continer_cadastrar_produto_adm">
