--- a/PI/Pages/pedido_solo.html
+++ b/PI/Pages/pedido_solo.html
@@ -56,7 +56,7 @@
             </nav>
         </div>
     </header>
-    <main class="main_adm">
+    <main  class="main2">
         <div class="cadastrar_produto_adm">
             <div class="title_continer_cadastrar_produto_adm">
                 <a href=""><i class="fa-solid fa-chevron-left"></i></a>
