Subindo o Forms de Avaliação ecommerce

--- a/PI/Pages/teste_page.html
+++ b/PI/Pages/teste_page.html
@@ -6,6 +6,10 @@
     <title>Produto Personalizado</title>
     <link rel="stylesheet" href="../src/Css/style.css">
 
+    <!-- ########## -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- ########## -->
+
     <script src="../src/JS/filtro-mobile.js" defer></script>
 
 
